kubernetes/infrastructure/cilium-config/refgrant-longhorn.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: refgrant-longhorn
  namespace: longhorn-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: kube-system
  to:
  - group: ""
    kind: Service
